plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
    // Repositorio oficial de Jaspersoft (necesario para algunas dependencias transitivas de la v7)
    maven { url 'https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/' }
}

javafx {
    version = "24"
    // Añadimos 'javafx.swing' que es OBLIGATORIO para que Jasper imprima/exporte
    // Añadimos 'javafx.web' para WebView (visualización de informes HTML)
    modules = [ 'javafx.base', 'javafx.swing', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web']
}

dependencies {
    // JavaFX Controls
    implementation 'org.controlsfx:controlsfx:11.2.2'

    // PostgreSQL Driver (Actualizado para corregir vulnerabilidad CVE)
    implementation 'org.postgresql:postgresql:42.7.2'

    // CalendarFX
    implementation 'com.calendarfx:view:12.0.1'

    // JasperReports 7.0.1 (Correcto para coincidir con tu Studio)
    implementation 'net.sf.jasperreports:jasperreports:7.0.1'
    implementation 'net.sf.jasperreports:jasperreports-fonts:7.0.1'
    implementation 'net.sf.jasperreports:jasperreports-functions:7.0.1'
    implementation 'net.sf.jasperreports:jasperreports-chart-themes:7.0.1'
    implementation 'net.sf.jasperreports:jasperreports-pdf:7.0.1'

    // Dependencias de PDF (OpenPDF es el motor por defecto en Jasper 7 en lugar de iText)
    implementation 'com.github.librepdf:openpdf:1.3.30'

    // Logging (Necesario para evitar errores de SLF4J al arrancar)
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'org.slf4j:slf4j-simple:2.0.9'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

application {
    mainClass = 'com.javafx.Clases.Main'
}

sourceSets {
    main {
        resources {
            srcDirs = ["src/main/resources"]
            includes = ["**/*.fxml","**/*.png","**/*.properties","**/*.css","**/*.jrxml","**/*.jasper","**/*.xml"]
        }
    }
}

// BLOQUE CRÍTICO PARA JAVA 17/21/24
// Sin esto, JasperReports fallará con "InaccessibleObjectException"
tasks.withType(JavaExec).configureEach {
    jvmArgs += [
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=java.base/java.util=ALL-UNNAMED",
            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
            "--add-opens=java.base/java.text=ALL-UNNAMED",
            "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
            "--add-opens=java.desktop/java.awt.geom=ALL-UNNAMED",
            "--add-opens=java.base/java.io=ALL-UNNAMED"
    ]
}